Bring in a load of build stuff from other projects